syntax = "proto3";

package jobworkerp.function.service;

import "jobworkerp/function/data/function.proto";

message FindFunctionRequest {
    bool exclude_runner = 1;
    bool exclude_worker = 2;
}

service FunctionService {
  rpc FindList(FindFunctionRequest) returns (stream jobworkerp.function.data.FunctionSpecs);
}
